# filesystem-for-agent

./: .gitignore  pyproject.toml
src/: test_lib.py
src/filesystem_for_agents/: __init__.py  filesystem.py
